# hadoop

./: .BUILDING.txt.swp  .arcconfig  .asf.yaml  .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  BUILDING.txt  BUILDME.txt  Blanks_eol.py  CHANGES.branch-1-win.txt  CHANGES.txt  Dockerfile  Dockerfile.rhel  Dockerfile.rhel7  Environmental.bashexample  HADOOP-3628.txt  HBASE-2099.14.patch  HDFS-8562.patch  HdfsFileStatus-yahoo20.patch  Hello Russia  Jenkinsfile  LICENSE-binary  LICENSE-binary-yarn-applications-catalog-webapp  LICENSE-binary-yarn-ui  LICENSE.txt  MAPREDUCE-6415.003.patch  MAPREDUCE-6415_branch-2.003.patch  Matressbank.biz  NOTICE-binary  NOTICE.txt  OWNERS  README-decodable.md  README.md  README.txt  README.xiaoye  Uoeno  YARN-1051-CHANGES.txt  YARN-8193  YARN-9615-branch-3.3-001.patch.1  (+34 more)
branch-2.0.4-alpha/hadoop-common-project/hadoop-common/src/: CMakeLists.txt  config.h.cmake
branch-2.0.4-alpha/hadoop-tools/hadoop-pipes/src/: CMakeLists.txt
hadoop-common-project/hadoop-common/src/: CMakeLists.txt  JNIFlags.cmake  config.h.cmake  hadoop_endian.h.cmake
hadoop-common-project/hadoop-common/src/contrib/bash-tab-completion/: hadoop.sh
hadoop-common-project/hadoop-common/src/main/conf/: core-site.xml  ecschema-def.xml  hadoop-env.cmd  hadoop-env.sh  hadoop-metrics2.properties  hadoop-policy.xml  hadoop-user-functions.sh.example  log4j.properties  ssl-server.xml.example
hadoop-common-project/hadoop-common/src/main/docs/: releasenotes.html
hadoop-common-project/hadoop-common/src/main/java/: overview.html
hadoop-common-project/hadoop-common/src/main/native/: Makefile.am  README  UpgradeLog.htm  acinclude.m4  configure.ac  native.sln  native.vcxproj  native.vcxproj.filters
hadoop-common-project/hadoop-common/src/main/proto/: FSProtos.proto  GenericRefreshProtocol.proto  GetUserMappingsProtocol.proto  HAServiceProtocol.proto  IpcConnectionContext.proto  ProtobufRpcEngine.proto  ProtobufRpcEngine2.proto  ProtocolInfo.proto  RefreshAuthorizationPolicyProtocol.proto  RefreshCallQueueProtocol.proto  RefreshUserMappingsProtocol.proto  RpcHeader.proto  RpcPayloadHeader.proto  Security.proto  TraceAdmin.proto  ZKFCProtocol.proto  hadoop_rpc.proto
hadoop-common-project/hadoop-common/src/main/resources/: application-classloader.properties  common-version-info.properties  core-default.xml  org.apache.hadoop.application-classloader.properties
hadoop-common-project/hadoop-common/src/main/winutils/: UpgradeLog.htm  chmod.c  chown.c  client.c  config.cpp  groups.c  hadoopwinutilsvc.idl  hardlink.c  libwinutils.c  libwinutils.vcxproj  ls.c  main.c  service.c  symlink.c  systeminfo.c  task.c  win8sdk.props  winutils.mc  winutils.sln  winutils.vcxproj
hadoop-common-project/hadoop-common/src/proto/: hadoop_rpc.proto
hadoop-common-project/hadoop-common/src/site/: site.xml
hadoop-common-project/hadoop-common/src/site/apt/: CLIMiniCluster.apt.vm  ClusterSetup.apt.vm  CommandsManual.apt.vm  Compatibility.apt.vm  DeprecatedProperties.apt.vm  FileSystemShell.apt.vm  HttpAuthentication.apt.vm  InterfaceClassification.apt.vm  Metrics.apt.vm  NativeLibraries.apt.vm  RackAwareness.apt.vm  SecureMode.apt.vm  ServiceLevelAuth.apt.vm  SingleCluster.apt.vm  SingleNodeSetup.apt.vm  Superusers.apt.vm  Tracing.apt.vm
hadoop-common-project/hadoop-common/src/site/markdown/: AdminCompatibilityGuide.md  AsyncProfilerServlet.md  Benchmarking.md  CLIMiniCluster.md.vm  ClusterSetup.md  CommandsManual.md  Compatibility.md  CredentialProviderAPI.md  DeprecatedProperties.md  DownstreamDev.md  Metrics.md  (+15 more)
hadoop-hdfs-project/hadoop-hdfs-native-client/src/: CMakeLists.txt
hadoop-hdfs-project/hadoop-hdfs/src/: CMakeLists.txt  config.h.cmake
hadoop-hdfs-project/hadoop-hdfs/src/contrib/: build-contrib.xml  build.xml
hadoop-hdfs-project/hadoop-hdfs/src/proto/: InterDatanodeProtocol.proto  JournalProtocol.proto  NamenodeProtocol.proto  datatransfer.proto  hdfs.proto
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-nativetask/src/: CMakeLists.txt  JNIFlags.cmake  config.h.cmake
hadoop-native-core/: CHANGES.txt  CMakeLists.txt  GenerateProtobufs.cmake  pom.xml
hadoop-native-core/common/: hadoop_err-unit.c  hadoop_err.c  hadoop_err.h  net-unit.c  net.c  queue.h  test.c  test.h  user.h
hadoop-native-core/hdfs/: namenode-rpc-unit.c
hadoop-native-core/rpc/: call.c  call.h  client_id.c  conn.c  conn.h  messenger.c  messenger.h  protoc-gen-hrpc.cc  proxy.c  proxy.h  reactor.c  shorten.c  varint-unit.c  varint.h
hadoop-native-core/src/main/native/: CMakeLists.txt  GenerateProtobufs.cmake  config.h.cmake
hadoop-tools/hadoop-pipes/src/: CMakeLists.txt
src/c++/task-controller/: Makefile.in  configuration.c  configuration.h.in  configure  configure.ac  main.c  task-controller.c  task-controller.h
src/c++/task-controller/impl/: configuration.c  configuration.h  main.c  task-controller.c  task-controller.h
src/c++/task-controller/test/: test-task-controller.c
src/c++/task-controller/tests/: test-task-controller.c
src/contrib/fuse-dfs/: README  acinclude.m4  bootstrap.sh  build.xml  configure.ac  global_footer.mk  ivy.xml
src/contrib/fuse-dfs/ivy/: libraries.properties
src/contrib/fuse-dfs/src/: Makefile.am  fuse_connect.c  fuse_connect.h  fuse_context_handle.h  fuse_dfs.c  fuse_dfs.h  fuse_dfs_wrapper.sh  fuse_impls_chmod.c  fuse_impls_chown.c  fuse_impls_getattr.c  fuse_impls_open.c  fuse_impls_read.c  fuse_impls_readdir.c  fuse_impls_release.c  fuse_impls_rename.c  fuse_impls_rmdir.c  fuse_impls_statfs.c  fuse_impls_truncate.c  fuse_impls_utimens.c  fuse_impls_write.c  fuse_init.c  fuse_options.c  fuse_stat_struct.c  fuse_trash.c
src/contrib/fuse-dfs/test/: TestFuseDFS.java
src/native/: Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  hadoop.vcxproj  native.sln  packageBinNativeHadoop.py  packageBinNativeHadoop.sh  packageNativeHadoop.py  packageNativeHadoop.sh
src/native/config/: config.guess  config.sub
src/native/lib/: Makefile.am  Makefile.in
src/native/src/: org_apache_hadoop.h
(+48130 files in other folders)
